bk_ida/gccida/c0/ssa_rename_from_initialize
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ssa_rename_from_initialize/src/ssa.c:736:11: error: use of undeclared identifier 'OT'
( htab_eq)OT::IntType<unsigned int, 4u>::operator==, 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ssa_rename_from_initialize/src/ssa.c:736:40: error: expected expression
( htab_eq)OT::IntType<unsigned int, 4u>::operator==, 
                                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ssa_rename_from_initialize/src/obj/ssa.o] Error 1
